--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/bulma": "^1.2.1",
     "nuxt": "^2.11.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2"
+  }
 }
